products handler not as routes
