# routes/api.yaml
@@ -248,6 +248,8 @@ paths:
         - $ref: '#/components/parameters/sortParam'
         - $ref: '#/components/parameters/skipParam'
         - $ref: '#/components/parameters/limitParam'
+      operationId: getProducts
+      x-eov-operation-handler: products
       responses:
         '200':
           description: Products
@@ -261,6 +263,8 @@ paths:
       tags:
         - Products
       summary: Create a product
+      operationId: createProduct
+      x-eov-operation-handler: products
       responses:
         '201':
           description: New product
@@ -290,6 +294,8 @@ paths:
       security:
         - {}
         - JWT: []
+      operationId: getProduct
+      x-eov-operation-handler: products
       responses:
         '200':
           description: Product
@@ -303,6 +309,8 @@ paths:
       tags:
         - Products
       summary: Update product fields by id
+      operationId: updateProduct
+      x-eov-operation-handler: products
       responses:
         '204':
           $ref: '#/components/responses/NoContentResponse'
@@ -319,6 +327,8 @@ paths:
       tags:
         - Products
       summary: Delete a product by id
+      operationId: deleteProduct
+      x-eov-operation-handler: products
       responses:
         '204':
           $ref: '#/components/responses/NoContentResponse'
@@ -331,6 +341,8 @@ paths:
       tags:
         - Products
       summary: Replace owner of product
+      operationId: updateProductOwner
+      x-eov-operation-handler: products
       responses:
         '204':
           $ref: '#/components/responses/NoContentResponse'
